--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,17 @@
   		<version>2.3.0</version>
   		<scope>provided</scope>
   	</dependency>
+  	 <dependency>
+	    <groupId>com.microsoft.sqlserver</groupId>
+	    <artifactId>mssql-jdbc</artifactId>
+	    <version>8.4.1.jre11</version>
+	  </dependency>
+	  <dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.37</version>
+	  </dependency>
   </dependencies>
+  
+  
 </project>
